[tool.poetry]
name = "datajoint-tutorial"
version = "0.1.0"
description = ""
authors = ["Ivan Ustyuzhaninov <ivan.ustyuzhaninov@tu-dortmund.de>"]
readme = "README.md"
packages = [{include = "datajoint_tutorial"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydot = "^1.4.2"
networkx = "2.6.3"
graphviz = "^0.20.1"
jupyterlab = "^3.6.3"
torch = {extras = ["cpu"], version = "^2.0.0"}
torchvision = "^0.15.1"
matplotlib = "^3.7.1"
datajoint = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
